[package]
name = "api-rest-rust"
version = "0.1.0"
authors = ["Kayky Casagrande <kayky-cas@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

warp = "0.2"
parking_lot = "0.10.0"
serde = "1.0"
tokio = "0.2"